Fix focus navigation, remove animation hidden overflow

--- a/components/utils/reveal.module.scss
+++ b/components/utils/reveal.module.scss
@@ -1,6 +1,5 @@
 .revealContainer {
   position: relative;
-  overflow: hidden;
 }
 
 .revealContainerFit {
